added technical report file

--- a/documentation/Exploring_the_data.ipynb
+++ b/documentation/Exploring_the_data.ipynb
@@ -1743,7 +1743,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd2b203c",
+   "id": "8a011ad6",
    "metadata": {},
    "source": [
     "# 4.Green areas Amsterdam data"
@@ -1752,7 +1752,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "508221cb",
+   "id": "662f6dac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1762,7 +1762,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "345926fc",
+   "id": "84a18ffd",
    "metadata": {},
    "outputs": [
     {
@@ -1913,7 +1913,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "74006c67",
+   "id": "30352956",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1923,7 +1923,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "d9f8b3ac",
+   "id": "e6f27216",
    "metadata": {},
    "outputs": [
     {
@@ -1954,7 +1954,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "a624b0ad",
+   "id": "1fcffb01",
    "metadata": {},
    "outputs": [
     {
@@ -1977,14 +1977,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f626c619",
+   "id": "34ce3250",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "40bd7944",
+   "id": "dbd7ec5a",
    "metadata": {},
    "source": [
     "# 5. Safety areas Amsterdam data"
@@ -1993,7 +1993,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "76c5677f",
+   "id": "b2731850",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2003,7 +2003,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "fd79cacd",
+   "id": "cdda1282",
    "metadata": {},
    "outputs": [
     {
@@ -2174,7 +2174,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "9fa6d37e",
+   "id": "5a779f31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2184,7 +2184,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "2138e859",
+   "id": "03019ef5",
    "metadata": {},
    "outputs": [
     {
@@ -2212,7 +2212,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "bbec8f42",
+   "id": "929e05e7",
    "metadata": {},
    "outputs": [
     {
@@ -2407,7 +2407,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "7e20d0ce",
+   "id": "4f21d4d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2417,8 +2417,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 66,
+   "id": "020bd872",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "K Zuid          18\n",
+       "F Nieuw-West    18\n",
+       "E West          18\n",
+       "N Noord         18\n",
+       "M Oost          18\n",
+       "A Centrum       18\n",
+       "T Zuidoost      18\n",
+       "Name: District, dtype: int64"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "district_crimes_ams[\"District\"].value_counts() #look if is the code corresponds"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 62,
-   "id": "c893d5f2",
+   "id": "21d61fdd",
    "metadata": {},
    "outputs": [
     {
@@ -2569,7 +2597,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "5db9b4c0",
+   "id": "e9dd27ed",
    "metadata": {},
    "outputs": [
     {
