--- a/documentation/Technical report.ipynb
+++ b/documentation/Technical report.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "24c8c12c",
+   "id": "d2f15f12",
    "metadata": {
     "toc": true
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Summary\" data-toc-modified-id=\"Summary-1\">Summary</a></span></li><li><span><a href=\"#1.-Introduction-to-the-project\" data-toc-modified-id=\"1.-Introduction-to-the-project-2\">1. Introduction to the project</a></span><ul class=\"toc-item\"><li><span><a href=\"#1.1.-Project-description\" data-toc-modified-id=\"1.1.-Project-description-2.1\">1.1. Project description</a></span></li><li><span><a href=\"#1.2.-Objective\" data-toc-modified-id=\"1.2.-Objective-2.2\">1.2. Objective</a></span></li><li><span><a href=\"#1.3.-Questions-&amp;-Hypotheses\" data-toc-modified-id=\"1.3.-Questions-&amp;-Hypotheses-2.3\">1.3. Questions &amp; Hypotheses</a></span></li></ul></li><li><span><a href=\"#2.-Methods\" data-toc-modified-id=\"2.-Methods-3\">2. Methods</a></span></li><li><span><a href=\"#3.-Results\" data-toc-modified-id=\"3.-Results-4\">3. Results</a></span></li><li><span><a href=\"#4.-Discussion\" data-toc-modified-id=\"4.-Discussion-5\">4. Discussion</a></span></li><li><span><a href=\"#5.-Conclusions\" data-toc-modified-id=\"5.-Conclusions-6\">5. Conclusions</a></span></li><li><span><a href=\"#Annex\" data-toc-modified-id=\"Annex-7\">Annex</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Summary\" data-toc-modified-id=\"Summary-1\">Summary</a></span></li><li><span><a href=\"#1.-Introduction-to-the-project\" data-toc-modified-id=\"1.-Introduction-to-the-project-2\">1. Introduction to the project</a></span><ul class=\"toc-item\"><li><span><a href=\"#1.1.-Project-description\" data-toc-modified-id=\"1.1.-Project-description-2.1\">1.1. Project description</a></span></li><li><span><a href=\"#1.2.-Objective\" data-toc-modified-id=\"1.2.-Objective-2.2\">1.2. Objective</a></span></li><li><span><a href=\"#1.3.-Questions-&amp;-Hypotheses\" data-toc-modified-id=\"1.3.-Questions-&amp;-Hypotheses-2.3\">1.3. Questions &amp; Hypotheses</a></span></li></ul></li><li><span><a href=\"#2.-Methods\" data-toc-modified-id=\"2.-Methods-3\">2. Methods</a></span><ul class=\"toc-item\"><li><span><a href=\"#2.1.-Data-sets\" data-toc-modified-id=\"2.1.-Data-sets-3.1\">2.1. Data sets</a></span></li><li><span><a href=\"#2.2.-Technology-used\" data-toc-modified-id=\"2.2.-Technology-used-3.2\">2.2. Technology used</a></span></li></ul></li><li><span><a href=\"#3.-Results\" data-toc-modified-id=\"3.-Results-4\">3. Results</a></span><ul class=\"toc-item\"><li><span><a href=\"#3.1.-Amsterdam-Airbnb-caracterization-in-the-present\" data-toc-modified-id=\"3.1.-Amsterdam-Airbnb-caracterization-in-the-present-4.1\">3.1. Amsterdam Airbnb caracterization in the present</a></span></li></ul></li><li><span><a href=\"#4.-Discussion\" data-toc-modified-id=\"4.-Discussion-5\">4. Discussion</a></span></li><li><span><a href=\"#5.-Conclusions\" data-toc-modified-id=\"5.-Conclusions-6\">5. Conclusions</a></span></li><li><span><a href=\"#Annex\" data-toc-modified-id=\"Annex-7\">Annex</a></span></li></ul></div>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "08e39e29",
+   "id": "6c5e64f6",
    "metadata": {},
    "source": [
     "# Technical report"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfc1a434",
+   "id": "d33935aa",
    "metadata": {},
    "source": [
     "# Airbnb in Amsterdam, pre and post corona"
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fe55c4f",
+   "id": "dc013d32",
    "metadata": {},
    "source": [
     "                                                                               Laura Trapero, Amsterdam, July 2021"
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81647685",
+   "id": "fea262ce",
    "metadata": {},
    "source": [
     "## Summary"
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b183ddd1",
+   "id": "80ef8828",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13a5cb2e",
+   "id": "5a9aeaa2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -62,14 +62,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23b93f10",
+   "id": "dd3380fb",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "575dab41",
+   "id": "5bfcf40f",
    "metadata": {},
    "source": [
     "## 1. Introduction to the project"
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a935351f",
+   "id": "5ae7e9fe",
    "metadata": {},
    "source": [
     "Since the start of the corona crisis in 2020, tourism trends have been worldwide changed.\n",
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cc24be2",
+   "id": "137804d5",
    "metadata": {},
    "source": [
     "### 1.1. Project description"
@@ -111,14 +111,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c489abb",
+   "id": "e43c3cd8",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "64b694cc",
+   "id": "9c400844",
    "metadata": {},
    "source": [
     "### 1.2. Objective"
@@ -126,16 +126,48 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5c2dc5d",
+   "id": "0b83ca8e",
+   "metadata": {},
+   "source": [
+    "1. Charachterize the airbnb locations distribution in the city relating it to the safety and green spaces per neighbourhood.\n",
+    "\n",
+    "2. Compare how the available locations have change during this period (number of locations aivalable, type of locations...)\n",
+    "\n",
+    "3. Analyze the changes on prices, availability and bookings during this period"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "969481f7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3104f2b8",
    "metadata": {},
    "source": [
     "### 1.3. Questions & Hypotheses"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "615f387d",
+   "metadata": {},
+   "source": [
+    "1. We expect to find more airbnb locations in neighbourhoods with more s2 of green areas and less criminality. As well as in the center.\n",
+    "\n",
+    "2. Becasue of the government restrictions, and the known decrease of non national visitors, we expect less accomotations available and perhaps more full house renting than rooms.\n",
+    "\n",
+    "3. The fluctuation on the prices during this period should follow a pattern according to the country restriccions of mobility and touristic activities."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ea22030",
+   "id": "4b1ac051",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -143,31 +175,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13037577",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3fa241d0",
+   "id": "1f3329d5",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "b84570ce",
+   "id": "e0901d3e",
    "metadata": {},
    "source": [
     "## 2. Methods"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b6a18465",
+   "metadata": {},
+   "source": [
+    "### 2.1. Data sets"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e91f23bb",
+   "id": "cdabe038",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -175,78 +207,94 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d606f6db",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "db91fd91",
+   "id": "f47cf4d6",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "3da59efc",
+   "id": "11378343",
+   "metadata": {},
+   "source": [
+    "### 2.2. Technology used"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0cd4c5c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29c9365d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c976bcf9",
    "metadata": {},
    "source": [
     "## 3. Results"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c7777f07",
+   "cell_type": "markdown",
+   "id": "c99635bf",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 3.1. Amsterdam Airbnb caracterization in the present"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d99b5992",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e513ca3d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "77ee92b5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e2709ad8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d45c1baa",
+   "id": "072f0998",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "2d48c6e2",
+   "id": "002bcff6",
+   "metadata": {},
+   "source": [
+    "#"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba136155",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9a6926d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4f126a1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d147c3f8",
    "metadata": {},
    "source": [
     "## 4. Discussion"
@@ -255,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58907dfd",
+   "id": "2abc0630",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -263,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e015a322",
+   "id": "e65b854e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -271,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4e753ae",
+   "id": "8431ce37",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -279,7 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79b44c4a",
+   "id": "c083c554",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -287,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a2f6886",
+   "id": "7c1e6980",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -295,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5fc6bef4",
+   "id": "e67ac318",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -303,14 +351,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b041371",
+   "id": "2f6f4700",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "fc8fdbd9",
+   "id": "63612a9e",
    "metadata": {},
    "source": [
     "## 5. Conclusions"
@@ -319,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7093422",
+   "id": "3c84b9f0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -327,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "339e9b0d",
+   "id": "272f1b62",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -335,7 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7e1ae91",
+   "id": "46f5aa61",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -343,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be602dc0",
+   "id": "e551d667",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -351,7 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51485e21",
+   "id": "d485b8c0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -359,14 +407,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1068fc0d",
+   "id": "2404292c",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "79ea0bfb",
+   "id": "c4348572",
    "metadata": {},
    "source": [
     "## Annex"
@@ -375,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71da6aae",
+   "id": "f747a27d",
    "metadata": {},
    "outputs": [],
    "source": []
