small change in the listings db, adding district name

--- a/documentation/Exploring_the_data.ipynb
+++ b/documentation/Exploring_the_data.ipynb
@@ -2520,7 +2520,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "4b9b1255",
+   "id": "5642e850",
    "metadata": {},
    "outputs": [
     {
@@ -2711,7 +2711,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "aeb10dc1",
+   "id": "0b0bc958",
    "metadata": {},
    "outputs": [
     {
@@ -2809,7 +2809,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "f8069e71",
+   "id": "78d8e6d3",
    "metadata": {},
    "outputs": [
     {
@@ -3025,7 +3025,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "ea6fd6c3",
+   "id": "95125caa",
    "metadata": {},
    "outputs": [
     {
@@ -3509,7 +3509,230 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 108,
+   "id": "a21eb5f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_dates_listings = all_dates_listings.drop(columns=\"Stadsdeel_code\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "40bf0e0b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_dates_listings = all_dates_listings.rename(columns= {\"Stadsdeel\":\"District\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "id": "ac286605",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>host_id</th>\n",
+       "      <th>host_name</th>\n",
+       "      <th>neighbourhood</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>room_type</th>\n",
+       "      <th>price</th>\n",
+       "      <th>minimum_nights</th>\n",
+       "      <th>number_of_reviews</th>\n",
+       "      <th>last_review</th>\n",
+       "      <th>reviews_per_month</th>\n",
+       "      <th>calculated_host_listings_count</th>\n",
+       "      <th>availability_365</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>District_code</th>\n",
+       "      <th>District</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2818</td>\n",
+       "      <td>Quiet Garden View Room &amp; Super Fast WiFi</td>\n",
+       "      <td>3159</td>\n",
+       "      <td>Daniel</td>\n",
+       "      <td>Oostelijk Havengebied - Indische Buurt</td>\n",
+       "      <td>52.365755</td>\n",
+       "      <td>4.941419</td>\n",
+       "      <td>Private room</td>\n",
+       "      <td>49.56</td>\n",
+       "      <td>3</td>\n",
+       "      <td>248</td>\n",
+       "      <td>2018-11-28</td>\n",
+       "      <td>2.10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>44</td>\n",
+       "      <td>December 2018</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Oost</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3209</td>\n",
+       "      <td>Quiet apt near center, great view</td>\n",
+       "      <td>3806</td>\n",
+       "      <td>Maartje</td>\n",
+       "      <td>Westerpark</td>\n",
+       "      <td>52.390225</td>\n",
+       "      <td>4.873924</td>\n",
+       "      <td>Entire home/apt</td>\n",
+       "      <td>134.40</td>\n",
+       "      <td>4</td>\n",
+       "      <td>42</td>\n",
+       "      <td>2018-08-29</td>\n",
+       "      <td>1.03</td>\n",
+       "      <td>1</td>\n",
+       "      <td>47</td>\n",
+       "      <td>December 2018</td>\n",
+       "      <td>E</td>\n",
+       "      <td>West</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20168</td>\n",
+       "      <td>100%Centre-Studio 1 Private Floor/Bathroom</td>\n",
+       "      <td>59484</td>\n",
+       "      <td>Alex</td>\n",
+       "      <td>Centrum-Oost</td>\n",
+       "      <td>52.365087</td>\n",
+       "      <td>4.893541</td>\n",
+       "      <td>Entire home/apt</td>\n",
+       "      <td>67.20</td>\n",
+       "      <td>1</td>\n",
+       "      <td>233</td>\n",
+       "      <td>2018-11-30</td>\n",
+       "      <td>2.18</td>\n",
+       "      <td>2</td>\n",
+       "      <td>198</td>\n",
+       "      <td>December 2018</td>\n",
+       "      <td>A</td>\n",
+       "      <td>Centrum</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>25428</td>\n",
+       "      <td>Lovely apt in City Centre (Jordaan)</td>\n",
+       "      <td>56142</td>\n",
+       "      <td>Joan</td>\n",
+       "      <td>Centrum-West</td>\n",
+       "      <td>52.373114</td>\n",
+       "      <td>4.883668</td>\n",
+       "      <td>Entire home/apt</td>\n",
+       "      <td>105.00</td>\n",
+       "      <td>14</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2018-01-21</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>2</td>\n",
+       "      <td>141</td>\n",
+       "      <td>December 2018</td>\n",
+       "      <td>A</td>\n",
+       "      <td>Centrum</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>27886</td>\n",
+       "      <td>Romantic, stylish B&amp;B houseboat in canal district</td>\n",
+       "      <td>97647</td>\n",
+       "      <td>Flip</td>\n",
+       "      <td>Centrum-West</td>\n",
+       "      <td>52.386727</td>\n",
+       "      <td>4.892078</td>\n",
+       "      <td>Private room</td>\n",
+       "      <td>126.00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>171</td>\n",
+       "      <td>2018-11-25</td>\n",
+       "      <td>2.03</td>\n",
+       "      <td>1</td>\n",
+       "      <td>199</td>\n",
+       "      <td>December 2018</td>\n",
+       "      <td>A</td>\n",
+       "      <td>Centrum</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      id                                               name  host_id  \\\n",
+       "0   2818           Quiet Garden View Room & Super Fast WiFi     3159   \n",
+       "1   3209                  Quiet apt near center, great view     3806   \n",
+       "2  20168         100%Centre-Studio 1 Private Floor/Bathroom    59484   \n",
+       "3  25428                Lovely apt in City Centre (Jordaan)    56142   \n",
+       "4  27886  Romantic, stylish B&B houseboat in canal district    97647   \n",
+       "\n",
+       "  host_name                           neighbourhood   latitude  longitude  \\\n",
+       "0    Daniel  Oostelijk Havengebied - Indische Buurt  52.365755   4.941419   \n",
+       "1   Maartje                              Westerpark  52.390225   4.873924   \n",
+       "2      Alex                            Centrum-Oost  52.365087   4.893541   \n",
+       "3      Joan                            Centrum-West  52.373114   4.883668   \n",
+       "4      Flip                            Centrum-West  52.386727   4.892078   \n",
+       "\n",
+       "         room_type   price  minimum_nights  number_of_reviews last_review  \\\n",
+       "0     Private room   49.56               3                248  2018-11-28   \n",
+       "1  Entire home/apt  134.40               4                 42  2018-08-29   \n",
+       "2  Entire home/apt   67.20               1                233  2018-11-30   \n",
+       "3  Entire home/apt  105.00              14                  1  2018-01-21   \n",
+       "4     Private room  126.00               2                171  2018-11-25   \n",
+       "\n",
+       "   reviews_per_month  calculated_host_listings_count  availability_365  \\\n",
+       "0               2.10                               1                44   \n",
+       "1               1.03                               1                47   \n",
+       "2               2.18                               2               198   \n",
+       "3               0.09                               2               141   \n",
+       "4               2.03                               1               199   \n",
+       "\n",
+       "            Date District_code District  \n",
+       "0  December 2018             M     Oost  \n",
+       "1  December 2018             E     West  \n",
+       "2  December 2018             A  Centrum  \n",
+       "3  December 2018             A  Centrum  \n",
+       "4  December 2018             A  Centrum  "
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_dates_listings.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
    "id": "65b72c4a",
    "metadata": {},
    "outputs": [],
