changed an error on the slides

--- a/documentation/Amsterdam Airbnb Analysis.ipynb
+++ b/documentation/Amsterdam Airbnb Analysis.ipynb
@@ -1622,7 +1622,7 @@
   {
    "cell_type": "code",
    "execution_count": 448,
-   "id": "d0550e27",
+   "id": "ae05c63d",
    "metadata": {},
    "outputs": [
     {
@@ -2756,7 +2756,7 @@
   {
    "cell_type": "code",
    "execution_count": 451,
-   "id": "d3a23fc6",
+   "id": "0a0c2dac",
    "metadata": {},
    "outputs": [
     {
@@ -2953,7 +2953,7 @@
   {
    "cell_type": "code",
    "execution_count": 453,
-   "id": "6f1260f5",
+   "id": "72f6cf8b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2970,7 +2970,7 @@
   {
    "cell_type": "code",
    "execution_count": 454,
-   "id": "d799c3af",
+   "id": "2e3d1bf0",
    "metadata": {},
    "outputs": [
     {
@@ -3092,7 +3092,7 @@
   {
    "cell_type": "code",
    "execution_count": 455,
-   "id": "130fe8da",
+   "id": "7729d311",
    "metadata": {},
    "outputs": [
     {
@@ -3222,7 +3222,7 @@
   {
    "cell_type": "code",
    "execution_count": 458,
-   "id": "4b13c044",
+   "id": "4be45209",
    "metadata": {},
    "outputs": [
     {
@@ -4657,7 +4657,7 @@
   {
    "cell_type": "code",
    "execution_count": 578,
-   "id": "48d9e0c0",
+   "id": "14a441bc",
    "metadata": {},
    "outputs": [
     {
@@ -5100,7 +5100,7 @@
   {
    "cell_type": "code",
    "execution_count": 580,
-   "id": "e9a5ec9f",
+   "id": "d41b0c20",
    "metadata": {},
    "outputs": [
     {
@@ -6121,7 +6121,7 @@
   {
    "cell_type": "code",
    "execution_count": 614,
-   "id": "fe0fdd14",
+   "id": "11a68799",
    "metadata": {},
    "outputs": [
     {
@@ -6169,7 +6169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eccc85d6",
+   "id": "24b0a56d",
    "metadata": {},
    "source": [
     "### 3.1. Weekend no weekend, booked rentals"
@@ -6312,7 +6312,7 @@
   {
    "cell_type": "code",
    "execution_count": 535,
-   "id": "600ceb99",
+   "id": "65647d41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6331,7 +6331,7 @@
   {
    "cell_type": "code",
    "execution_count": 536,
-   "id": "0798d099",
+   "id": "b16c33c1",
    "metadata": {},
    "outputs": [
     {
@@ -6465,7 +6465,7 @@
   {
    "cell_type": "code",
    "execution_count": 619,
-   "id": "cf6cd3c0",
+   "id": "77d08aa6",
    "metadata": {},
    "outputs": [
     {
@@ -6569,7 +6569,7 @@
   {
    "cell_type": "code",
    "execution_count": 616,
-   "id": "ec98d82e",
+   "id": "26b48af0",
    "metadata": {},
    "outputs": [
     {
@@ -6737,7 +6737,7 @@
   {
    "cell_type": "code",
    "execution_count": 538,
-   "id": "d5d6e6c9",
+   "id": "fa11e5a2",
    "metadata": {},
    "outputs": [
     {
@@ -6798,7 +6798,7 @@
   {
    "cell_type": "code",
    "execution_count": 539,
-   "id": "c354eb9f",
+   "id": "4ad3c774",
    "metadata": {},
    "outputs": [
     {
@@ -6902,7 +6902,7 @@
   {
    "cell_type": "code",
    "execution_count": 540,
-   "id": "d4eea1e8",
+   "id": "3035abee",
    "metadata": {},
    "outputs": [
     {
@@ -6935,7 +6935,7 @@
   {
    "cell_type": "code",
    "execution_count": 542,
-   "id": "9d83bf73",
+   "id": "af63bd63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6951,7 +6951,7 @@
   {
    "cell_type": "code",
    "execution_count": 545,
-   "id": "403152b6",
+   "id": "9de8fe18",
    "metadata": {},
    "outputs": [
     {
@@ -7054,7 +7054,7 @@
   {
    "cell_type": "code",
    "execution_count": 546,
-   "id": "5c5d2136",
+   "id": "a6713cfc",
    "metadata": {},
    "outputs": [
     {
@@ -7115,7 +7115,7 @@
   {
    "cell_type": "code",
    "execution_count": 547,
-   "id": "9e3192b8",
+   "id": "84dec455",
    "metadata": {},
    "outputs": [
     {
@@ -7234,7 +7234,7 @@
   {
    "cell_type": "code",
    "execution_count": 549,
-   "id": "a9f7a8a8",
+   "id": "8b253366",
    "metadata": {},
    "outputs": [
     {
@@ -7799,6 +7799,68 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 621,
+   "id": "7da51f6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>reviews</th>\n",
+       "      <th>median_price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>reviews</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.464818</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>median_price</th>\n",
+       "      <td>0.464818</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               reviews  median_price\n",
+       "reviews       1.000000      0.464818\n",
+       "median_price  0.464818      1.000000"
+      ]
+     },
+     "execution_count": 621,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "###no high correlation....\n",
+    "review_avgprice_xday.corr()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 381,
    "id": "7a18979d",
    "metadata": {},
@@ -7811,7 +7873,7 @@
   {
    "cell_type": "code",
    "execution_count": 384,
-   "id": "10c5092e",
+   "id": "a02720eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7863,7 +7925,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74ce7411",
+   "id": "7ab69a8b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -8242,7 +8304,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77d0bbdd",
+   "id": "2355a11c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8412,7 +8474,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c31aa03",
+   "id": "d9ac07c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8423,7 +8485,7 @@
   {
    "cell_type": "code",
    "execution_count": 594,
-   "id": "960845de",
+   "id": "2d56f8eb",
    "metadata": {},
    "outputs": [
     {
@@ -8454,7 +8516,7 @@
   {
    "cell_type": "code",
    "execution_count": 595,
-   "id": "bda3c812",
+   "id": "0ca68b24",
    "metadata": {},
    "outputs": [
     {
@@ -8485,7 +8547,7 @@
   {
    "cell_type": "code",
    "execution_count": 597,
-   "id": "624c8d5f",
+   "id": "3941387c",
    "metadata": {},
    "outputs": [
     {
@@ -8516,7 +8578,7 @@
   {
    "cell_type": "code",
    "execution_count": 596,
-   "id": "d238c222",
+   "id": "124f8825",
    "metadata": {},
    "outputs": [
     {
